Add color map function

--- a/src/components/modal/modal.sandbox.html
+++ b/src/components/modal/modal.sandbox.html
@@ -32,5 +32,7 @@
         Suscipit, eos excepturi possimus alias asperiores laudantium repudiandae! Deleniti explicabo nesciunt, ut reprehenderit minus omnis commodi mollitia sapiente, quod iste at dolorum, animi adipisci maiores voluptas dolores cum dolor est!
         Voluptate fuga alias repellat tenetur! Vero numquam iure sapiente sunt corrupti id officiis consequatur quod illum ipsam voluptate harum veritatis sequi molestiae esse, ipsum maxime a, beatae aspernatur nemo laudantium.
         <div slot="footer">Pied de page</div>
-    </m-modal>
+    </m-modal>à
+
+    <div class="test2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet facilis tenetur neque explicabo dolores, repudiandae sequi modi perferendis illum, aut consectetur dolore ratione accusamus quis, excepturi tempora nesciunt ad quasi.</div>
 </div>
