--- a/src/styles/abstracts/_var-font.scss
+++ b/src/styles/abstracts/_var-font.scss
@@ -1,8 +1,8 @@
 // ======================================================================
 //  Fonts property
 // ======================================================================
-$m-font-name: 'Source Sans Pro' !default;
-$m-font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif !default;
+$m-font-name: 'Source Sans Variable' !default;
+$m-font-family: 'Source Sans Variable', 'Helvetica Neue', Arial, sans-serif !default;
 
 // ======================================================================
 //  App font size
