--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -2,4 +2,30 @@
 //  Import font face
 // ======================================================================
 // @import url('https://fonts.googleapis.com/css?family=Overpass:200,300,400,600');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600');
+// @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600');
+
+@font-face {
+    font-family: 'Source Sans Variable';
+    src: url('./fonts/SourceSansVariable-Roman.otf');
+    src:
+        url('./fonts/SourceSansVariable-Roman.otf.woff') format('woff'),
+        url('./fonts/SourceSansVariable-Roman.otf.woff2') format('woff2'),
+        url('./fonts/SourceSansVariable-Roman.ttf') format('truetype'),
+        url('./fonts/SourceSansVariable-Roman.ttf.woff') format('woff'),
+        url('./fonts/SourceSansVariable-Roman.ttf.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Source Sans Variable';
+    src: url('./fonts/SourceSansVariable-Italic.otf');
+    src:
+        url('./fonts/SourceSansVariable-Italic.otf.woff') format('woff'),
+        url('./fonts/SourceSansVariable-Italic.otf.woff2') format('woff2'),
+        url('./fonts/SourceSansVariable-Italic.ttf') format('truetype'),
+        url('./fonts/SourceSansVariable-Italic.ttf.woff') format('woff'),
+        url('./fonts/SourceSansVariable-Italic.ttf.woff2') format('woff2');
+    font-weight: normal;
+    font-style: italic;
+}
