--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -12,7 +12,7 @@
     .m-u--h5,
     .m-u--h6 {
         font-family: $m-font-family;
-        font-weight: $m-font-weight--bold;
+        font-variation-settings: 'wght' 400;
         line-height: 1.1;
     }
 
