--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -6,26 +6,26 @@
 
 @font-face {
     font-family: 'Source Sans Variable';
-    src: url('./fonts/SourceSansVariable-Roman.otf');
+    src: url('/base/fonts/fonts/SourceSansVariable-Roman.otf');
     src:
-        url('./fonts/SourceSansVariable-Roman.otf.woff') format('woff'),
-        url('./fonts/SourceSansVariable-Roman.otf.woff2') format('woff2'),
-        url('./fonts/SourceSansVariable-Roman.ttf') format('truetype'),
-        url('./fonts/SourceSansVariable-Roman.ttf.woff') format('woff'),
-        url('./fonts/SourceSansVariable-Roman.ttf.woff2') format('woff2');
+        url('/base/fonts/fonts/SourceSansVariable-Roman.otf.woff') format('woff'),
+        url('/base/fonts/fonts/SourceSansVariable-Roman.otf.woff2') format('woff2'),
+        url('/base/fonts/fonts/SourceSansVariable-Roman.ttf') format('truetype'),
+        url('/base/fonts/fonts/SourceSansVariable-Roman.ttf.woff') format('woff'),
+        url('/base/fonts/fonts/SourceSansVariable-Roman.ttf.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Source Sans Variable';
-    src: url('./fonts/SourceSansVariable-Italic.otf');
+    src: url('/base/fonts/fonts/SourceSansVariable-Italic.otf');
     src:
-        url('./fonts/SourceSansVariable-Italic.otf.woff') format('woff'),
-        url('./fonts/SourceSansVariable-Italic.otf.woff2') format('woff2'),
-        url('./fonts/SourceSansVariable-Italic.ttf') format('truetype'),
-        url('./fonts/SourceSansVariable-Italic.ttf.woff') format('woff'),
-        url('./fonts/SourceSansVariable-Italic.ttf.woff2') format('woff2');
+        url('/base/fonts/fonts/SourceSansVariable-Italic.otf.woff') format('woff'),
+        url('/base/fonts/fonts/SourceSansVariable-Italic.otf.woff2') format('woff2'),
+        url('/base/fonts/fonts/SourceSansVariable-Italic.ttf') format('truetype'),
+        url('/base/fonts/fonts/SourceSansVariable-Italic.ttf.woff') format('woff'),
+        url('/base/fonts/fonts/SourceSansVariable-Italic.ttf.woff2') format('woff2');
     font-weight: normal;
     font-style: italic;
 }
