--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 // ======================================================================
 @import
     'abstracts/variables',
+    'abstracts/functions',
     'abstracts/custom-properties',
     'abstracts/var-color-calendar';
 
@@ -14,7 +15,9 @@
 @import
     'base/fonts',
     'base/base',
+    'base/color',
     'base/typography',
+    'base/spacing',
     'base/layout',
     'base/animations';
 
