--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,6 @@
 .m-u--app-body {
     font-family: $m-font-family;
-    font-weight: $m-font-weight;
+    font-variation-settings: 'wght' 300;
     font-style: normal;
     font-size: $m-font-size;
     line-height: $m-line-height;
