--- a/src/components/checkbox/checkbox.sandbox.html
+++ b/src/components/checkbox/checkbox.sandbox.html
@@ -10,11 +10,16 @@
     </p>
 
     <!-- Sandbox template -->
-    <h3>Test Title</h3>
+    <h3>Readonly</h3>
     <p class="m-u--margin-bottom">
-        Test description
+        Un checkbox peut être en mode readonly. Il garde sa valeur.
         <!-- if relevant, add link to PR
         </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
         -->
     </p>
+
+    <m-checkbox :readonly="isReadOnly"
+                v-model="checkboxReadOnlyValue">Readonly</m-checkbox><em>(Valeur checkbox: {{checkboxReadOnlyValue}})</em><br />
+    <m-button @click="isReadOnly = !isReadOnly">Activer/Désactiver ReadOnly</m-button>
+
 </div>
