Update pullrequest dans sandbox

--- a/src/components/checkbox/checkbox.sandbox.html
+++ b/src/components/checkbox/checkbox.sandbox.html
@@ -13,9 +13,9 @@
     <h3>Readonly</h3>
     <p class="m-u--margin-bottom">
         Un checkbox peut être en mode readonly. Il garde sa valeur.
-        <!-- if relevant, add link to PR
-        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
-        -->
+        </br>From <a href="https://github.com/ulaval/modul-components/pull/579"
+           target="blank">PR 579</a>
+
     </p>
 
     <m-checkbox :readonly="isReadOnly"
