MODUL-555 - Supprimer @emit('after-enter') du portal.ts

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -75,7 +75,7 @@
              :preload="true"
              :open-trigger="'mousedown'"
              :lazy="false"
-             @after-enter="calculateFilterableListeHeight"
+             @portal-content-visible="calculateFilterableListeHeight"
              @portal-content-mounted="portalContentMounted">
         <template slot="header"
                   v-if="isMqMaxS && (hasLabel || filterable)">
