MODUL-555 - Définir les styles de la liste avec un computed

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -98,6 +98,7 @@
         <ul :id="ariaControls"
             class="m-dropdown__list"
             ref="items"
+            :style="itemsHeightStyle"
             :aria-labelledby="id"
             aria-live="polite">
             <slot></slot>
