MODUL577 - Update m-add

--- a/src/components/add/add.html
+++ b/src/components/add/add.html
@@ -7,7 +7,7 @@
         :target="target"
         :underline="underline"
         :icon-position="iconPosition"
-        icon-name="m-svg__add-circle-filled"
-        :icon-size="iconSize">
+        :icon-size="iconSize"
+        icon-name="m-svg__add-circle-filled">
     <slot></slot>
 </m-link>
